# python_notebooks

./: .gitignore  Generators.ipynb  LICENSE  Makefile  README.md  csv_from_string.ipynb  pyproject.toml  python_notebooks.service  requirements.txt  simple_name_space.ipynb  start.sh  words_frequency_learn_dictionaries.ipynb
3party/: component.json
CSV/: Custom Row Type.ipynb  README.md
CSV - Comma Separated Values/: Custom Row Type.ipynb
Learn Python the Hard Way/: Hard Way 20-20 Functions and Files.ipynb  Hard Way 32-34 Loops and Lists.ipynb  Hard Way 36-36 Designing and Debugging.ipynb  Hard Way 39-39 Dictionaries.ipynb  inplace.txt
Logging Examples/: 01 Getting Started.ipynb  03 Get Logger Made Simple.ipynb  06 Log to Console and File.ipynb  logging.ini
Notes/: Double-Underscore Functions.ipynb  Line Continuation and Multi-line Strings.ipynb  Regular Expression with Comment.ipynb
PyPI/: PyPI Project Information with requests.ipynb  PyPI Project Information.ipynb
Web/: Parsing and Constructing URL.ipynb
Writing Idiomatic Python/: Organizing Your Code.ipynb  Working with Data Part 2.ipynb
_support/: install-service.sh  jupyter_notebook_config.py  python_notebooks.service  requirements.txt  start.sh
csv/: Dialects.ipynb  Filter Out Bad Data Lines.ipynb  any_iterable.ipynb  csv_from_string.ipynb
data_structure/: base1_tuple.ipynb
datetime/: datetime.ipynb
enum/: conversion.ipynb  enum_qa.ipynb
hard_way/: Hard Way 10-10 What Was That.ipynb
ini/: ini_tryout.ipynb
markdown/: bullet_list.ipynb
network/: network.ipynb
sandbox/: hosts.csv  (+9 more)
(+144 files in other folders)
