[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.12.1",
    "jupyterlab[all]>=4.3.5",
    "networkx>=3.4.2",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
